tests/bad-ctor-02/out.txt
error: pattern does not a constructor type: (int) -> (d)
  ┌─ inp.sml:5:5
  │
5 │   | B => 2
  │     ^

typechecking failed
